Changes proposed by @TobiKattmann in #1236

--- a/TestCases/rans/naca0012/turb_NACA0012_sst_fixedvalues.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst_fixedvalues.cfg
@@ -256,5 +256,5 @@ OUTPUT_WRT_FREQ= 10000
 %
 %
 % Screen output fields
-SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LIFT, DRAG)
+SCREEN_OUTPUT= (INNER_ITER, RMS_DENSITY, RMS_TKE, RMS_DISSIPATION, LINSOL_RESIDUAL, LIFT, DRAG)
 OUTPUT_FILES= (RESTART_ASCII, PARAVIEW, SURFACE_PARAVIEW)
