--- a/config_template.cfg
+++ b/config_template.cfg
@@ -195,7 +195,9 @@ FREESTREAM_TURBULENCEINTENSITY= 0.05
 % Fix turbulence quantities to far-field values inside an upstream half-space
 TURB_FIXED_VALUES= NO
 %
-% Shift of the fixed values half-space, in space units in the direction of far-field velocity
+% Shift of the half-space on which fixed values are applied. 
+% It consists of those coordinates whose dot product with the 
+% normalized far-field velocity is less than this parameter.
 TURB_FIXED_VALUES_DOMAIN= -1.0
 %
 % Free-stream ratio between turbulent and laminar viscosity
