Allow OpDiLib backend choice.

--- a/meson.build
+++ b/meson.build
@@ -108,6 +108,12 @@ if omp
   # add opdi dependency
   if get_option('enable-autodiff')
     codi_dep += declare_dependency(include_directories: 'externals/opdi/include')
+
+    if get_option('opdi-backend') == 'macro'
+      su2_cpp_args += '-DFORCE_OPDI_MACRO_BACKEND'
+    elif get_option('opdi-backend') == 'ompt'
+      su2_cpp_args += '-DFORCE_OPDI_OMPT_BACKEND'
+    endif
   endif
 endif
 
