--- a/TestCases/rans/naca0012/turb_NACA0012_sst.cfg
+++ b/TestCases/rans/naca0012/turb_NACA0012_sst.cfg
@@ -181,6 +181,9 @@ CFL_REDUCTION_TURB= 1.0
 
 % --------------------------- CONVERGENCE PARAMETERS --------------------------%
 %
+% Convergence field
+CONV_FIELD= RMS_DENSITY
+%
 % Min value of the residual (log10 of the residual)
 CONV_RESIDUAL_MINVAL= -12
 %
