--- a/test/invwedge.cfg
+++ b/test/invwedge.cfg
@@ -16,10 +16,10 @@
 %                               POISSON_EQUATION)
 SOLVER= EULER
 %
-%GAS_MODEL= AIR-5
+GAS_MODEL= air_5
 %
 %Initial gas composition in mass fractions
-%GAS_COMPOSITION= (0.77, 0.23, 0.0, 0.0, 0.0)
+GAS_COMPOSITION= (0.0, 0.0, 0.0, 0.767082, 0.232918)
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
@@ -42,7 +42,7 @@ SIDESLIP_ANGLE= 0.0
 FREESTREAM_PRESSURE= 101325.0
 %
 % Free-stream temperature (288.15 K by default)
-FREESTREAM_TEMPERATURE= 288.15
+FREESTREAM_TEMPERATURE= 300
 %FREESTREAM_TEMPERATURE_VE= 288.15
 
 % ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
@@ -50,7 +50,7 @@ FREESTREAM_TEMPERATURE= 288.15
 % Fluid model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS,
 %              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, SU2_NONEQ)
 FLUID_MODEL= THERMALLY_PERFECT
-
+%FLUID_MODEL= STANDARD_AIR
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
 % Euler wall boundary marker(s) (NONE = no marker)
@@ -74,7 +74,7 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 0.5
 %
 % Number of total iterations
-ITER= 5000
+ITER= 2
 %
 % Linear solver for the implicit formulation (BCGSTAB, FGMRES)
 LINEAR_SOLVER= BCGSTAB
