inv wedge running

--- a/test/invwedge.cfg
+++ b/test/invwedge.cfg
@@ -42,7 +42,7 @@ SIDESLIP_ANGLE= 0.0
 FREESTREAM_PRESSURE= 101325.0
 %
 % Free-stream temperature (288.15 K by default)
-FREESTREAM_TEMPERATURE= 2000
+FREESTREAM_TEMPERATURE= 288.15
 %FREESTREAM_TEMPERATURE_VE= 288.15
 
 % ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
@@ -57,7 +57,7 @@ FLUID_MODEL= THERMALLY_PERFECT
 MARKER_EULER= ( Euler, Wall )
 MARKER_OUTLET= ( Exit, 10 )
 MARKER_FAR = ( Farfield, Inlet )
-%
+
 % Marker(s) of the surface to be plotted or designed
 MARKER_PLOTTING= (NONE )
 %
@@ -74,7 +74,7 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 0.5
 %
 % Number of total iterations
-ITER= 2
+ITER= 2500
 %
 % Linear solver for the implicit formulation (BCGSTAB, FGMRES)
 LINEAR_SOLVER= BCGSTAB
@@ -89,11 +89,11 @@ LINEAR_SOLVER_ITER= 5
 %
 % Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
 %                              TURKEL_PREC, MSW)
-CONV_NUM_METHOD_FLOW= ROE
+CONV_NUM_METHOD_FLOW= AUSM
 %
 % Spatial numerical order integration (1ST_ORDER, 2ND_ORDER, 2ND_ORDER_LIMITER)
 %
-MUSCL_FLOW= YES
+MUSCL_FLOW= NO
 %
 % Slope limiter (VENKATAKRISHNAN, MINMOD)
 SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
