--- a/test/inv/invwedge.cfg
+++ b/test/inv/invwedge.cfg
@@ -58,8 +58,8 @@ FLUID_MODEL= THERMALLY_PERFECT
 %
 % Euler wall boundary marker(s) (NONE = no marker)
 MARKER_EULER= ( Euler, Wall )
-%MARKER_OUTLET= ( Exit, 10 )
-MARKER_FAR = ( Farfield, Inlet,  Exit )
+MARKER_OUTLET= ( Exit, 10 )
+MARKER_FAR = ( Farfield, Inlet )
 
 % Marker(s) of the surface to be plotted or designed
 MARKER_PLOTTING= (NONE )
