included changes from mohammad's fork

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -431,6 +431,10 @@ PITCHING_PHASE= 0.0 0.0 0.0
 % iteration, delta_theta, delta_phi, delta_psi, theta_dot, phi_dot, psi_dot
 PITCHING_FILENAME= pitching.csv
 %
+% File defining arbitrary translation motion. Required format is a csv file
+% iteration, deltaX, deltaY, deltaZ, xDot, yDot, zDot
+TRANSLATION_FILENAME= translation.csv
+%
 % Translational velocity (m/s or ft/s) in the x, y, & z directions
 TRANSLATION_RATE = 0.0 0.0 0.0
 %
