Removing tabs, reverting some changes due to unknown uses

--- a/TestCases/turbomachinery/centrifugal_stage/centrifugal_stage.cfg
+++ b/TestCases/turbomachinery/centrifugal_stage/centrifugal_stage.cfg
@@ -5,7 +5,7 @@
 % Author: S. Vitale                                                            %
 % Institution: Delft University of Technology                                  %
 % Date: Oct 28th, 2015                                                         %
-% File Version 7.1.1 "Blackbird"                                               %
+% File Version 4.0.1 "cardinal"                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
