--- a/TestCases/incomp_rans/rough_flatplate/rough_flatplate_incomp.cfg
+++ b/TestCases/incomp_rans/rough_flatplate/rough_flatplate_incomp.cfg
@@ -5,7 +5,7 @@
 %                   pressure gradient                                          %
 % Author: Akshay Koodly                                                        %
 % Date: 2020.07.07                                                             %
-% File Version 7.1.1 "Blackbird"                                               %
+% File Version 7.0.x "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
