--- a/TestCases/sliding_interface/incompressible_unsteady/configCircle.cfg
+++ b/TestCases/sliding_interface/incompressible_unsteady/configCircle.cfg
@@ -5,7 +5,7 @@
 % Author: Ruben Sanchez                                                         %
 % Institution: Chair for Scientific Computing, TU Kaiserslautern                %
 % Date: January 28th, 2018                                                      %
-% File Version 7.1.1 "Blackbird"                                                %
+% File Version 6.1.0 "Falcon"                                                   %
 %                                                                               %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
