--- a/TestCases/turbomachinery/centrifugal_blade/centrifugal_blade.cfg
+++ b/TestCases/turbomachinery/centrifugal_blade/centrifugal_blade.cfg
@@ -2,10 +2,10 @@
 %                                                                              %
 % SU2 configuration file                                                       %
 % Case description: Centrifugal turbine rotor                                  %
-% Author:S. Vitale                                			                       %
+% Author:S. Vitale                                                             %
 % Institution: Delft University of Technology                                  %
 % Date: Oct 26th, 2015                                                         %
-% File Version 7.1.1 "Blackbird"                                               %
+% File Version 4.0.1 "cardinal"                                                %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %
