--- a/test/gamma/CO2N2/dwedge.cfg
+++ b/test/gamma/CO2N2/dwedge.cfg
@@ -11,7 +11,7 @@
 %
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 MATH_PROBLEM= DIRECT
-SOLVER= EULER %NAVIER_STOKES
+SOLVER= NAVIER_STOKES
 %RESTART_SOL= YES
 RESTART_ITER= 255001
 
@@ -24,9 +24,9 @@ RESTART_ITER= 255001
 MACH_NUMBER= 9
 AOA= 0.0
 SIDESLIP_ANGLE= 0.0
-FREESTREAM_TEMPERATURE= 300 %160
+FREESTREAM_TEMPERATURE= 160
 %FREESTREAM_TEMPERATURE_VE= 160
-FREESTREAM_PRESSURE= 101325 %10
+FREESTREAM_PRESSURE= 10
 INIT_OPTION= TD_CONDITIONS
 %
 %------------------------------- GAS MODEL ------------------------------------%
@@ -48,12 +48,13 @@ GAS_CONSTANT= 190.258
 %MARKER_FAR = ( inlet, farfield )
 %MARKER_ISOTHERMAL= ( wall1, 300, wall2, 300, wall3, 300 )
 %
-%MARKER_EULER= ( Euler, Wall )
-%MARKER_OUTLET= ( Exit, 2 )
-%MARKER_FAR = ( Farfield, Inlet )
+MARKER_EULER= ( Euler)
+MARKER_OUTLET= ( Exit, 2 )
+MARKER_FAR = ( Farfield, Inlet )
+MARKER_ISOTHERMAL= (Wall, 300 )
 
 %MARKER_SYM= (Farfield, Inlet, Exit, Euler, Wall)
-MARKER_FAR= (top,bottom,right,left)
+%MARKER_FAR= (top,bottom,right,left)
 %
 MARKER_PLOTTING= ( euler, Wall )
 %MARKER_MONITORING= ( none )
@@ -68,7 +69,7 @@ LINEAR_SOLVER= FGMRES
 LINEAR_SOLVER_ERROR= 1E-6
 LINEAR_SOLVER_ITER= 10
 %TIME_ITER= 100000000000
-ITER= 1
+ITER= 40000000
 %
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 MGLEVEL= 0
