--- a/TestCases/disc_adj_fsi/Airfoil_2d/config.cfg
+++ b/TestCases/disc_adj_fsi/Airfoil_2d/config.cfg
@@ -7,10 +7,12 @@ MARKER_ZONE_INTERFACE= (pressure_side,pressure_side_s, suction_side,suction_side
 CONSERVATIVE_INTERPOLATION= NO
 
 OUTER_ITER= 9
+OUTPUT_WRT_FREQ= 99999
+
 MESH_FILENAME= mesh.su2
 
 OBJECTIVE_FUNCTION= REFERENCE_NODE
 
 SCREEN_OUTPUT= OUTER_ITER, AVG_BGS_RES[0], SENS_E[1]
 
-%WRT_ZONE_CONV=YES
+WRT_ZONE_CONV=YES
