multizone output only for reg test compare

--- a/TestCases/disc_adj_fsi/Airfoil_2d/config.cfg
+++ b/TestCases/disc_adj_fsi/Airfoil_2d/config.cfg
@@ -15,4 +15,4 @@ OBJECTIVE_FUNCTION= REFERENCE_NODE
 
 SCREEN_OUTPUT= OUTER_ITER, AVG_BGS_RES[0], SENS_E[1]
 
-WRT_ZONE_CONV=YES
+%WRT_ZONE_CONV=YES
