added heat transport due to enthalpy diffusion term
Signed-off-by: jtneedels <jneedels@stanford.edu>

--- a/TestCases/nonequilibrium/viscwedge_catalytic/viscwedge.cfg
+++ b/TestCases/nonequilibrium/viscwedge_catalytic/viscwedge.cfg
@@ -5,7 +5,7 @@
 % Author: C. Garbacz                                                           %
 % Institution: Strathclyde University                                          %
 % Date: 2020.11.01                                                             %
-% File Version 7.1.0 "Blackbird"                                               %
+% File Version 7.0.8 "Blackbird"                                               %
 %                                                                              %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -55,7 +55,7 @@ KIND_TURB_MODEL= NONE
 % ---- NONEQUILIBRIUM GAS, IDEAL GAS, POLYTROPIC, VAN DER WAALS AND PENG ROBINSON CONSTANTS -------%
 %
 % Fluid model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS,
-%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, SU2_NONEQ)
+%              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, USER_DEFINED_NONEQ)
 FLUID_MODEL= SU2_NONEQ
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
@@ -71,7 +71,7 @@ MARKER_PLOTTING= (NONE )
 %
 % Marker(s) of the surface where the functional (Cd, Cl, etc.) will be evaluated
 MARKER_MONITORING= ( Wall )
-
+CATALYTIC_WALL= ( Wall )
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, LEAST_SQUARES, 
@@ -82,7 +82,7 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 0.5
 %
 % Number of total iterations
-ITER= 11
+ITER= 10000
 %
 % Linear solver for the implicit formulation (BCGSTAB, FGMRES)
 LINEAR_SOLVER= BCGSTAB
