--- a/TestCases/nonequilibrium/viscwedge_std/viscwedge.cfg
+++ b/TestCases/nonequilibrium/viscwedge_std/viscwedge.cfg
@@ -14,22 +14,22 @@
 % Physical governing equations (EULER, NAVIER_STOKES,
 %                               WAVE_EQUATION, HEAT_EQUATION, FEM_ELASTICITY,
 %                               POISSON_EQUATION)
-SOLVER= NEMO_NAVIER_STOKES
+SOLVER= NAVIER_STOKES
 %
-GAS_MODEL= air_5
+%GAS_MODEL= AIR-5
 %
-GAS_COMPOSITION= (0.0, 0.0, 0.0, 0.77, 0.23)
+%GAS_COMPOSITION= (0.77, 0.23, 0.0, 0.0, 0.0)
 %
 % Mathematical problem (DIRECT, CONTINUOUS_ADJOINT)
 MATH_PROBLEM= DIRECT
 %
 % Restart solution (NO, YES)
-RESTART_SOL= NO
-
+RESTART_SOL= YES
+AXISYMMETRIC = NO
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
 % Mach number (non-dimensional, based on the free-stream values)
-MACH_NUMBER= 25
+MACH_NUMBER= 5
 %
 % Angle of attack (degrees)
 AOA= 0.0
@@ -56,7 +56,7 @@ KIND_TURB_MODEL= NONE
 %
 % Fluid model (STANDARD_AIR, IDEAL_GAS, VW_GAS, PR_GAS,
 %              CONSTANT_DENSITY, INC_IDEAL_GAS, INC_IDEAL_GAS_POLY, MUTATIONPP, SU2_NONEQ)
-FLUID_MODEL= MUTATIONPP
+FLUID_MODEL= STANDARD_AIR
 
 % -------------------- BOUNDARY CONDITION DEFINITION --------------------------%
 %
@@ -67,13 +67,11 @@ MARKER_OUTLET= ( Exit, 5 )
 MARKER_FAR= ( Farfield, Inlet )
 %
 % Marker(s) of the surface to be plotted or designed
-MARKER_PLOTTING= ( Wall )
+MARKER_PLOTTING= (Wall )
 %
 % Marker(s) of the surface where the functional (Cd, Cl, etc.) will be evaluated
 MARKER_MONITORING= ( Wall )
-%CATALYTIC_WALL= ( Wall )
-%CATALYTIC_EFFICIENCY= 1.0
-%RADIATIVE_WALL= YES
+
 % ------------- COMMON PARAMETERS DEFINING THE NUMERICAL METHOD ---------------%
 %
 % Numerical method for spatial gradients (GREEN_GAUSS, LEAST_SQUARES, 
@@ -161,4 +159,4 @@ OUTPUT_WRT_FREQ= 100
 %  SURFACE_TECPLOT_BINARY, CSV, SURFACE_CSV, PARAVIEW, PARAVIEW_BINARY, SURFACE_PARAVIEW, 
 %  SURFACE_PARAVIEW_BINARY, MESH, RESTART_BINARY, RESTART_ASCII, CGNS, STL)
 % default : (RESTART, PARAVIEW, SURFACE_PARAVIEW)
-OUTPUT_FILES= (RESTART_ASCII, PARAVIEW_ASCII, SURFACE_PARAVIEW)
+OUTPUT_FILES= (RESTART, SURFACE_PARAVIEW, PARAVIEW_ASCII)
