--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -105,7 +105,7 @@ CFL_ADAPT= NO
 CFL_ADAPT_PARAM= ( 0.1, 2.0, 10.0, 1e10 )
 %
 % Number of total iterations
-ITER= 500
+ITER= 250
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -124,7 +124,7 @@ LINEAR_SOLVER_ITER= 10
 % -------------------------- MULTIGRID PARAMETERS -----------------------------%
 %
 % Multi-Grid Levels (0 = no multi-grid)
-MGLEVEL= 4
+MGLEVEL= 3
 %
 % Multi-grid cycle (V_CYCLE, W_CYCLE, FULLMG_CYCLE)
 MGCYCLE= W_CYCLE
@@ -181,7 +181,7 @@ SLOPE_LIMITER_ADJFLOW= NONE
 CFL_REDUCTION_ADJFLOW= 0.01
 %
 % Time discretization (RUNGE-KUTTA_EXPLICIT, EULER_IMPLICIT)
-TIME_DISCRE_ADJFLOW= RUNGE-KUTTA_EXPLICIT
+TIME_DISCRE_ADJFLOW= EULER_IMPLICIT
 
 % ----------------------- DESIGN VARIABLE PARAMETERS --------------------------%
 %
@@ -274,13 +274,9 @@ SOLUTION_ADJ_FILENAME= solution_adj.dat
 %
 % Output file format (TECPLOT, PARAVIEW, TECPLOT_BINARY)
 TABULAR_FORMAT= CSV
-OUTPUT_FILES= (RESTART, TECPLOT_ASCII, SURFACE_TECPLOT_ASCII)
 %
 % Output file convergence history (w/o extension) 
 CONV_FILENAME= history
-%
-%
-ROM_TESTBASIS_FILENAME = pod.txt
 %
 % Output file restart flow
 RESTART_FILENAME= restart_flow.dat
@@ -306,6 +302,17 @@ SURFACE_ADJ_FILENAME= surface_adjoint
 % Writing solution file frequency
 OUTPUT_WRT_FREQ= 250
 
+% ------------------------- ROM SIMULATION PARAMETERS -------------------------%
+%
+ROM_TESTBASIS_FILENAME = pod.txt
+%
+% Read binary restart files (YES, NO)
+%READ_BINARY_RESTART= NO
+%
+OUTPUT_FILES = (RESTART_ASCII, PARAVIEW, SURFACE_PARAVIEW)
+%
+%
+SAVE_LIBROM=YES
 % --------------------- OPTIMAL SHAPE DESIGN DEFINITION -----------------------%
 % Available flow based objective functions or constraint functions
 %    DRAG, LIFT, SIDEFORCE, EFFICIENCY,
@@ -338,9 +345,3 @@ OPT_OBJECTIVE= DRAG * 0.001
 % Optimization constraint functions with scaling factors, separated by semicolons
 % ex= (Objective = Value ) * Scale, use '>','<','='
 OPT_CONSTRAINT= ( LIFT > 0.328188 ) * 0.001; ( MOMENT_Z > 0.034068 ) * 0.001; ( AIRFOIL_THICKNESS > 0.11 ) * 0.001
-%
-% Write binary restart files (YES, NO)
-WRT_BINARY_RESTART= NO
-%
-% Read binary restart files (YES, NO)
-READ_BINARY_RESTART= NO
