--- a/SU2_DEF/src/meson.build
+++ b/SU2_DEF/src/meson.build
@@ -1,38 +1,51 @@
-su2_def_src = ['SU2_DEF.cpp']
+su2_def_include = include_directories('./')
+su2_def_src = files([
+  'SU2_DEF.cpp',
+  'drivers/CDeformationDriver.cpp'
+])
 if get_option('enable-normal')
 
-  su2_cfd_obj = su2_cfd_lib.extract_objects(['solvers/CSolver.cpp',
-                                        'solvers/CBaselineSolver.cpp',
-                                        'CMarkerProfileReaderFVM.cpp',
-                                        'output/COutput.cpp',
-                                        'output/tools/CWindowingTools.cpp',
-                                        'output/CMeshOutput.cpp',
-                                        'output/output_structure_legacy.cpp',
-                                        'variables/CBaselineVariable.cpp',
-                                        'variables/CVariable.cpp',
-                                        'output/filewriter/CParallelDataSorter.cpp',
-                                        'output/filewriter/CFVMDataSorter.cpp',
-                                        'output/filewriter/CFEMDataSorter.cpp',
-                                        'output/filewriter/CSurfaceFEMDataSorter.cpp',
-                                        'output/filewriter/CSurfaceFVMDataSorter.cpp',
-                                        'output/filewriter/CParallelFileWriter.cpp',
-                                        'output/filewriter/CParaviewFileWriter.cpp',
-                                        'output/filewriter/CParaviewBinaryFileWriter.cpp',
-                                        'output/filewriter/CTecplotFileWriter.cpp',
-                                        'output/filewriter/CTecplotBinaryFileWriter.cpp',
-                                        'output/filewriter/CCSVFileWriter.cpp',
-                                        'output/filewriter/CSTLFileWriter.cpp',
-                                        'output/filewriter/CSU2FileWriter.cpp',
-                                        'output/filewriter/CSU2BinaryFileWriter.cpp',
-                                        'output/filewriter/CParaviewXMLFileWriter.cpp',
-                                        'output/filewriter/CParaviewVTMFileWriter.cpp',
-                                        'output/filewriter/CSU2MeshFileWriter.cpp',
-                                        'limiters/CLimiterDetails.cpp'])
+su2_cfd_obj = su2_cfd_lib.extract_objects(['solvers/CSolver.cpp',
+                                      'solvers/CBaselineSolver.cpp',
+                                      'CMarkerProfileReaderFVM.cpp',
+                                      'output/COutput.cpp',
+                                      'output/tools/CWindowingTools.cpp',
+                                      'output/CMeshOutput.cpp',
+                                      'output/output_structure_legacy.cpp',
+                                      'variables/CBaselineVariable.cpp',
+                                      'variables/CVariable.cpp',
+                                      'output/filewriter/CParallelDataSorter.cpp',
+                                      'output/filewriter/CFVMDataSorter.cpp',
+                                      'output/filewriter/CFEMDataSorter.cpp',
+                                      'output/filewriter/CSurfaceFEMDataSorter.cpp',
+                                      'output/filewriter/CSurfaceFVMDataSorter.cpp',
+                                      'output/filewriter/CParallelFileWriter.cpp',
+                                      'output/filewriter/CParaviewFileWriter.cpp',
+                                      'output/filewriter/CParaviewBinaryFileWriter.cpp',
+                                      'output/filewriter/CTecplotFileWriter.cpp',
+                                      'output/filewriter/CTecplotBinaryFileWriter.cpp',
+                                      'output/filewriter/CCSVFileWriter.cpp',
+                                      'output/filewriter/CSTLFileWriter.cpp',
+                                      'output/filewriter/CSU2FileWriter.cpp',
+                                      'output/filewriter/CSU2BinaryFileWriter.cpp',
+                                      'output/filewriter/CParaviewXMLFileWriter.cpp',
+                                      'output/filewriter/CParaviewVTMFileWriter.cpp',
+                                      'output/filewriter/CSU2MeshFileWriter.cpp',
+                                      'limiters/CLimiterDetails.cpp'])
+
+  su2_def_lib = static_library('SU2core_DEF',
+                               su2_def_src,
+                               install : false,
+                               dependencies : [su2_deps, common_dep],
+                               cpp_args:  [default_warning_flags, su2_cpp_args])
+
+  su2_def_dep = declare_dependency(link_with: su2_def_lib,
+                                   include_directories: su2_def_include)
 
   su2_def = executable('SU2_DEF',
-                        su2_def_src, 
+                        su2_def_src,
                         install: true,
-                        dependencies: [su2_deps, common_dep], 
+                        dependencies: [su2_deps, common_dep],
                         objects : su2_cfd_obj,
                         cpp_args :[default_warning_flags, su2_cpp_args])
 endif
