--- a/TestCases/disc_adj_fsi/dyn_fsi/configFlow.cfg
+++ b/TestCases/disc_adj_fsi/dyn_fsi/configFlow.cfg
@@ -43,7 +43,7 @@ MARKER_DESIGNING= ( leading_edge, pressure_side, suction_side )
 % Common numerics settings --------------------------------------------- %
 REF_DIMENSIONALIZATION= DIMENSIONAL
 NUM_METHOD_GRAD= GREEN_GAUSS
-CFL_NUMBER= 15.0
+CFL_NUMBER= 1000.0
 %
 % Flow numerics -------------------------------------------------------- %
 CONV_NUM_METHOD_FLOW= JST
@@ -53,18 +53,15 @@ TIME_DISCRE_FLOW= EULER_IMPLICIT
 % Linear solvers ------------------------------------------------------- %
 LINEAR_SOLVER= BCGSTAB
 LINEAR_SOLVER_PREC= ILU
-LINEAR_SOLVER_ERROR= 1E-3
-LINEAR_SOLVER_ITER= 1000
-DISCADJ_LIN_SOLVER= BCGSTAB
+LINEAR_SOLVER_ERROR= 1E-6
+LINEAR_SOLVER_ITER= 25
+DISCADJ_LIN_SOLVER= SMOOTHER
 DISCADJ_LIN_PREC= ILU
+LINEAR_SOLVER_SMOOTHER_RELAXATION= 0.7
 % Multigrid
-MGLEVEL= 2
-MGCYCLE= V_CYCLE
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-MG_DAMP_RESTRICTION= 0.75
-MG_DAMP_PROLONGATION= 0.75
+MGLEVEL= 0
+NEWTON_KRYLOV= YES
+QUASI_NEWTON_NUM_SAMPLES= 999
 %
 DEFORM_LINEAR_SOLVER= CONJUGATE_GRADIENT
 DEFORM_LINEAR_SOLVER_PREC= ILU
@@ -78,9 +75,9 @@ DEFORM_POISSONS_RATIO= 1e6
 BGS_RELAXATION= FIXED_PARAMETER
 STAT_RELAX_PARAMETER= 1.0
 % fluid
-INNER_ITER= 51
+INNER_ITER= 31
 CONV_STARTITER= 0
-CONV_RESIDUAL_MINVAL= -9
+CONV_RESIDUAL_MINVAL= -7
 %
 % In\Out --------------------------------------------------------------- %
 MESH_FILENAME= mesh.su2
