--- a/TestCases/py_wrapper/flatPlate_unsteady_CHT/unsteady_CHT_FlatPlate_Conf.cfg
+++ b/TestCases/py_wrapper/flatPlate_unsteady_CHT/unsteady_CHT_FlatPlate_Conf.cfg
@@ -212,7 +212,7 @@ MARKER_MONITORING = ( plate )
 %
 % Viscous wall markers for which wall functions must be applied. (NONE = no marker)
 % Format: ( marker name, wall function type, ... )
-MARKER_WALL_FUNCTIONS= ( plate, NONE )
+MARKER_WALL_FUNCTIONS= ( plate, NO_WALL_FUNCTION )
 %
 % Marker(s) of the surface where custom thermal BC's are defined.
 MARKER_PYTHON_CUSTOM = (plate)
