Simplify cfd and cfd_ad library links

--- a/SU2_DEF/src/meson.build
+++ b/SU2_DEF/src/meson.build
@@ -6,44 +6,7 @@ su2_def_src = files([
 ])
 if get_option('enable-normal')
 
-su2_cfd_obj = su2_cfd_lib.extract_objects(['solvers/CSolver.cpp',
-                                      'solvers/CBaselineSolver.cpp',
-                                      'solvers/CMeshSolver.cpp',
-                                      'solvers/CFEASolver.cpp',
-                                      'numerics/CNumerics.cpp',
-                                      'numerics/elasticity/CFEAElasticity.cpp',
-                                      'numerics/elasticity/CFEALinearElasticity.cpp',
-                                      'CMarkerProfileReaderFVM.cpp',
-                                      'output/COutput.cpp',
-                                      'output/tools/CWindowingTools.cpp',
-                                      'output/CMeshOutput.cpp',
-                                      'output/output_structure_legacy.cpp',
-                                      'output/CBaselineOutput.cpp',
-                                      'variables/CBaselineVariable.cpp',
-                                      'variables/CVariable.cpp',
-                                      'variables/CFEAVariable.cpp',
-                                      'variables/CFEABoundVariable.cpp',
-                                      'variables/CMeshElement.cpp',
-                                      'variables/CMeshVariable.cpp',
-                                      'variables/CMeshBoundVariable.cpp',
-                                      'output/filewriter/CParallelDataSorter.cpp',
-                                      'output/filewriter/CFVMDataSorter.cpp',
-                                      'output/filewriter/CFEMDataSorter.cpp',
-                                      'output/filewriter/CSurfaceFEMDataSorter.cpp',
-                                      'output/filewriter/CSurfaceFVMDataSorter.cpp',
-                                      'output/filewriter/CParallelFileWriter.cpp',
-                                      'output/filewriter/CParaviewFileWriter.cpp',
-                                      'output/filewriter/CParaviewBinaryFileWriter.cpp',
-                                      'output/filewriter/CTecplotFileWriter.cpp',
-                                      'output/filewriter/CTecplotBinaryFileWriter.cpp',
-                                      'output/filewriter/CCSVFileWriter.cpp',
-                                      'output/filewriter/CSTLFileWriter.cpp',
-                                      'output/filewriter/CSU2FileWriter.cpp',
-                                      'output/filewriter/CSU2BinaryFileWriter.cpp',
-                                      'output/filewriter/CParaviewXMLFileWriter.cpp',
-                                      'output/filewriter/CParaviewVTMFileWriter.cpp',
-                                      'output/filewriter/CSU2MeshFileWriter.cpp',
-                                      'limiters/CLimiterDetails.cpp'])
+su2_cfd_obj = su2_cfd_lib.extract_all_objects()
 
   su2_def_lib = static_library('SU2core_DEF',
                                su2_def_src,
@@ -63,33 +26,7 @@ su2_cfd_obj = su2_cfd_lib.extract_objects(['solvers/CSolver.cpp',
 endif
 
 if get_option('enable-autodiff')
-su2_cfd_obj_ad = su2_cfd_lib_ad.extract_objects(['solvers/CSolver.cpp',
-                                                 'solvers/CBaselineSolver.cpp',
-                                                 'CMarkerProfileReaderFVM.cpp',
-                                                 'output/COutput.cpp',
-                                                 'output/tools/CWindowingTools.cpp',
-                                                 'output/output_structure_legacy.cpp',
-                                                 'output/CBaselineOutput.cpp',
-                                                 'output/filewriter/CParallelDataSorter.cpp',
-                                                 'output/filewriter/CParallelFileWriter.cpp',
-                                                 'output/filewriter/CFEMDataSorter.cpp',
-                                                 'output/filewriter/CSurfaceFEMDataSorter.cpp',
-                                                 'output/filewriter/CFVMDataSorter.cpp',
-                                                 'output/filewriter/CSurfaceFVMDataSorter.cpp',
-                                                 'output/filewriter/CCSVFileWriter.cpp',
-                                                 'output/filewriter/CSTLFileWriter.cpp',
-                                                 'output/filewriter/CTecplotFileWriter.cpp',
-                                                 'output/filewriter/CTecplotBinaryFileWriter.cpp',
-                                                 'output/filewriter/CParaviewFileWriter.cpp',
-                                                 'output/filewriter/CParaviewBinaryFileWriter.cpp',
-                                                 'output/filewriter/CSU2FileWriter.cpp',
-                                                 'output/filewriter/CSU2BinaryFileWriter.cpp',
-                                                 'output/filewriter/CSU2MeshFileWriter.cpp',
-                                                 'output/filewriter/CParaviewXMLFileWriter.cpp',
-                                                 'output/filewriter/CParaviewVTMFileWriter.cpp',
-                                                 'variables/CBaselineVariable.cpp',
-                                                 'variables/CVariable.cpp',
-                                                 'limiters/CLimiterDetails.cpp'])
+su2_cfd_obj_ad = su2_cfd_lib_ad.extract_all_objects()
 
   su2_def_lib_ad = static_library('SU2core_DEF_AD',
                                   su2_def_src,
