allow to use Meson version later than the minimum

--- a/meson.build
+++ b/meson.build
@@ -1,14 +1,11 @@
 project('SU2', 'c', 'cpp',
         version: '7.5.1 "Blackbird"',
+        meson_version: '>=0.61.1',
         license: 'LGPL2',
         default_options: ['buildtype=release',
                           'warning_level=0',
                           'c_std=c99',
                           'cpp_std=c++11'])
-
-if meson.version() != '0.61.1'
-  error('SU2 must be configured with the extended Meson script (./meson.py) in the SU2 root directory.')
-endif
 
 pymod = import('python')
 python = pymod.find_installation()
