--- a/meson.build
+++ b/meson.build
@@ -7,6 +7,11 @@ project('SU2', 'c', 'cpp',
                           'c_std=c99',
                           'cpp_std=c++11'])
 
+fsmod = import('fs')
+if not fsmod.exists('su2config.timestamp')
+  error('SU2 must be configured with the extended Meson script (./meson.py) in the SU2 root directory.')
+endif
+
 pymod = import('python')
 python = pymod.find_installation()
 
