--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_viscosity.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_viscosity.cfg
@@ -3,7 +3,8 @@
 % SU2 configuration file                                                       %
 % Case description: Species mixing with 2 species, i.e. 1 transport equations  %
 %                   Including mixture dependent density, viscosity, thermal    %
-%                   conductivity                                               %
+%                   conductivity and different viscosity ratios at the inlets  %
+%                   for the SA turbulent model.                                %
 % Author: Cristopher Morales Ubal                                              %
 % Institution: Eindhoven University of Technology                              %
 % Date: 2022/06/27                                                             %
@@ -14,16 +15,16 @@
 % ------------- DIRECT, ADJOINT, AND LINEARIZED PROBLEM DEFINITION ------------%
 %
 SOLVER= INC_RANS
-KIND_TURB_MODEL= SST
+KIND_TURB_MODEL= SA
 %
 % ---------------- INCOMPRESSIBLE FLOW CONDITION DEFINITION -------------------%
 %
 INC_DENSITY_MODEL= VARIABLE
 INC_DENSITY_INIT= 1.1766
 %
-INC_VELOCITY_INIT= ( 1.00, 0.0, 0.0 )
+INC_VELOCITY_INIT= ( 5.00, 0.0, 0.0 )
 %
-INC_ENERGY_EQUATION= YES
+INC_ENERGY_EQUATION= NO
 INC_TEMPERATURE_INIT= 300.0
 %
 INC_NONDIM= DIMENSIONAL
@@ -62,11 +63,15 @@ MARKER_SYM= ( axis )
 SPECIFIED_INLET_PROFILE= NO
 INLET_FILENAME= inlet_venturi.dat
 INC_INLET_TYPE=  VELOCITY_INLET VELOCITY_INLET
-MARKER_INLET= ( gas_inlet,       400, 1.0, 1.0,  0.0, 0.0,\
-                air_axial_inlet, 300, 1.0, 0.0, -1.0, 0.0 )
+MARKER_INLET= ( gas_inlet,       300, 5.0, 1.0,  0.0, 0.0,\
+                air_axial_inlet, 300, 3.0, 0.0, -1.0, 0.0 )
 SPECIES_USE_STRONG_BC= NO
 MARKER_INLET_SPECIES= (gas_inlet, 1.0, \          
-                       air_axial_inlet, 0.6)           
+                       air_axial_inlet, 0.6)
+%
+%
+MARKER_INLET_TURBULENT= (gas_inlet, 5.0\          
+                       air_axial_inlet, 3.0)           
 %
 INC_OUTLET_TYPE= PRESSURE_OUTLET
 MARKER_OUTLET= ( outlet, 0.0 )
