adding option in .cfg file and others

--- a/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_viscosity.cfg
+++ b/TestCases/species_transport/venturi_primitive_3species/species2_primitiveVenturi_mixingmodel_viscosity.cfg
@@ -70,7 +70,7 @@ MARKER_INLET_SPECIES= (gas_inlet, 1.0, \
                        air_axial_inlet, 0.6)
 %
 %
-MARKER_INLET_TURBULENT= (gas_inlet, 5.0\          
+MARKER_INLET_TURBULENT= (gas_inlet, 5.0, \          
                        air_axial_inlet, 3.0)           
 %
 INC_OUTLET_TYPE= PRESSURE_OUTLET
