separate out the pre-configure step
If a user wants to build SU2 from source and prefers to use
system-wide Meson and Ninja (assuming they are installed on the OS),
rather than SU2-specific copies, it is possible to avoid downloading
SU2-specific versions:

  $ ./preconfigure.py
  $ export CXXFLAGS=<preferred_compiler_options>
  $ meson setup <preferred_config_options> build
  $ ninja -C build install

The default behavior is unchanged. If a user does not have system-wide
Meson and Ninja installed on the OS and/or prefers to use SU2-specific
copies, it is stll possible to download and use SU2-specific versions
of Meson and Ninja:

  $ export CXXFLAGS=<preferred_compiler_options>
  $ ./meson.py setup <preferred_config_options> build
  $ ./ninja -C build install

--- a/.gitignore
+++ b/.gitignore
@@ -98,5 +98,5 @@ ninja
 # Ignore vscode folder
 .vscode/
 
-# Ignore SU2 configuration timestamp created by meson.py
-su2config.timestamp
+# Ignore SU2 pre-configuration timestamp created by preconfigure.py
+su2preconfig.timestamp
