--- a/TestCases/user_defined_functions/lam_flatplate.cfg
+++ b/TestCases/user_defined_functions/lam_flatplate.cfg
@@ -37,7 +37,7 @@ CUSTOM_OUTPUTS= 'velocity : Macro{sqrt(pow(VELOCITY_X, 2) + pow(VELOCITY_Y, 2) +
                  probe1 : Probe{$velocity}[0.005, 0.005, 0.05]'
 %
 % "COMBO" is the name and group of the output for the objective function
-% (regardless of definition). "CUSTOM" is the group for all custom outpus.
+% (regardless of definition). "CUSTOM" is the group for all custom outputs.
 SCREEN_OUTPUT= INNER_ITER, RMS_DENSITY, RMS_ENERGY, LINSOL_RESIDUAL, FORCE_Z,\
                SURFACE_MASSFLOW, SURFACE_TOTAL_TEMPERATURE, avg_vel, dev_vel, probe1, COMBO
 HISTORY_OUTPUT = ITER, AERO_COEFF, FLOW_COEFF, FLOW_COEFF_SURF, CUSTOM, COMBO
