deprecate cusp and make it an error to use MUSCL_FLOW=YES with centered schemes

--- a/QuickStart/inv_NACA0012.cfg
+++ b/QuickStart/inv_NACA0012.cfg
@@ -146,17 +146,9 @@ MG_DAMP_PROLONGATION= 1.0
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
-% Convective numerical method (JST, LAX-FRIEDRICH, CUSP, ROE, AUSM, HLLC,
-%                              TURKEL_PREC, MSW)
+% Convective numerical method
+%
 CONV_NUM_METHOD_FLOW= JST
-%
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
-MUSCL_FLOW= YES
-%
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG,
-%                BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-SLOPE_LIMITER_FLOW= VENKATAKRISHNAN_WANG
 %
 % 2nd and 4th order artificial dissipation coefficients
 JST_SENSOR_COEFF= ( 0.5, 0.02 )
