Replaced multi-layer perceptron classes with external submodule

--- a/meson.build
+++ b/meson.build
@@ -259,6 +259,19 @@ if get_option('enable-coolprop')
   endif
 endif
 
+if get_option('enable-mlpcpp')
+  cmake = import('cmake')
+  cmake_opts = cmake.subproject_options()
+  cmake_opts.set_override_option('warning_level', '0')
+  cmake_opts.add_cmake_defines({
+    'CMAKE_MAKE_PROGRAM': meson.source_root() + '/ninja',
+    'CMAKE_POSITION_INDEPENDENT_CODE': 'ON'
+  })
+  mlpcpp_subproj = cmake.subproject('MLPCpp', options: cmake_opts)
+  mlpcpp_dep = mlpcpp_subproj.dependency('MLPCpp')
+  su2_deps += mlpcpp_dep
+  su2_cpp_args += '-DHAVE_MLPCPP'
+endif
 
 if omp and get_option('enable-autodiff')
   py = find_program('python3','python')
@@ -325,7 +338,7 @@ message('''---------------------------------------------------------------------
 '''.format(get_option('prefix')+'/bin', meson.source_root(), get_option('enable-tecio'), get_option('enable-cgns'),
            get_option('enable-autodiff'), get_option('enable-directdiff'), get_option('enable-pywrapper'), get_option('enable-mkl'),
            get_option('enable-openblas'), get_option('enable-pastix'), get_option('enable-mixedprec'), get_option('enable-librom'), get_option('enable-coolprop'),
-           meson.build_root().startswith(meson.source_root()) ? meson.build_root().split('/')[-1] : meson.build_root()))
+           get_option('enable-mlpcpp'), meson.build_root().startswith(meson.source_root()) ? meson.build_root().split('/')[-1] : meson.build_root()))
 
 if get_option('enable-mpp')
   message(''' To run SU2 with Mutation++ library, add these lines to your .bashrc file:
