--- a/.gitmodules
+++ b/.gitmodules
@@ -24,3 +24,6 @@
 [submodule "externals/mel"]
 	path = externals/mel
 	url = https://github.com/pcarruscag/MEL.git
+[submodule "subprojects/MLPCpp"]
+	path = subprojects/MLPCpp
+	url = https://github.com/EvertBunschoten/MLPCpp.git
