--- a/meson_options.txt
+++ b/meson_options.txt
@@ -19,6 +19,7 @@ option('enable-mixedprec', type : 'boolean', value : false, description: 'use si
 option('extra-deps', type : 'string', value : '', description: 'comma-separated list of extra (custom) dependencies to add for compilation')
 option('enable-mpp',  type : 'boolean', value : false, description: 'enable Mutation++ support')
 option('enable-coolprop',  type : 'boolean', value : false, description: 'enable CoolProp support')
+option('enable-mlpcpp', type : 'boolean', value : false, description: 'enable MLPCpp support')
 option('opdi-backend', type : 'combo', choices : ['auto', 'macro', 'ompt'], value : 'auto', description: 'OpDiLib backend choice')
 option('codi-tape', type : 'combo', choices : ['JacobianLinear', 'JacobianIndex'], value : 'JacobianLinear', description: 'CoDiPack tape choice')
 option('opdi-shared-read-opt', type : 'boolean', value : true, description : 'OpDiLib shared reading optimization')
