run turbo problems with the single and multizone drivers

--- a/TestCases/disc_adj_turbomachinery/transonic_stator_2D/transonic_stator.cfg
+++ b/TestCases/disc_adj_turbomachinery/transonic_stator_2D/transonic_stator.cfg
@@ -17,7 +17,7 @@ KIND_TURB_MODEL= SST
 MATH_PROBLEM= DISCRETE_ADJOINT
 RESTART_SOL= NO
 NZONES= 1
-SINGLEZONE_DRIVER=NO
+%SINGLEZONE_DRIVER=NO
 
 % -------------------- COMPRESSIBLE FREE-STREAM DEFINITION --------------------%
 %
