update turbo cases

--- a/TestCases/harmonic_balance/HB.cfg
+++ b/TestCases/harmonic_balance/HB.cfg
@@ -55,7 +55,7 @@ CFL_NUMBER= 1.0
 CFL_ADAPT= NO
 CFL_ADAPT_PARAM= ( 1.5, 0.5, 1.0, 100.0 )
 RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
-ITER= 10
+ITER= 30
 
 % ------------------------ LINEAR SOLVER DEFINITION ---------------------------%
 %
@@ -105,6 +105,7 @@ CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
+SCREEN_OUTPUT= INNER_ITER, RMS_RES
 MESH_FILENAME= mesh_NACA64A010_inv.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
