--- a/TestCases/harmonic_balance/hb_rans_preconditioning/davis.cfg
+++ b/TestCases/harmonic_balance/hb_rans_preconditioning/davis.cfg
@@ -89,6 +89,7 @@ CONV_CAUCHY_EPS= 1E-6
 
 % ------------------------- INPUT/OUTPUT INFORMATION --------------------------%
 %
+SCREEN_OUTPUT= INNER_ITER, RMS_RES
 MESH_FILENAME= n64a010_turb.su2
 MESH_FORMAT= SU2
 MESH_OUT_FILENAME= mesh_out.su2
