--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1112,7 +1112,7 @@ SLOPE_LIMITER_TURB= VENKATAKRISHNAN
 MUSCL_ADJFLOW= YES
 %
 % Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN, VAN_ALBADA_EDGE,
-%                SHARP_EDGES, WALL_DISTANCE)
+%                SHARP_EDGES, WALL_DISTANCE, NISHIKAWAR3, NISHIKAWAR4, NISHIKAWAR5)
 SLOPE_LIMITER_ADJFLOW= VENKATAKRISHNAN
 %
 % Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence adjoint equations.
