Apply suggestions from code review

--- a/TestCases/euler/ramp/inv_ramp.cfg
+++ b/TestCases/euler/ramp/inv_ramp.cfg
@@ -1,8 +1,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %                                                                              %
 % SU2 configuration file                                                       %
-% Case description: Supersonic flow over a ramp in a channel (regression)     %
-% Author: Thomas D. Economon, Amit Sachdeva                                                   %
+% Case description: Supersonic flow over a ramp in a channel (regression)      %
+% Author: Thomas D. Economon, Amit Sachdeva                                    %
 % Institution: Stanford University                                             %
 % Date: 2023.04.08                                                             %
 % File Version 7.5.1 "Blackbird"                                               %
@@ -13,7 +13,7 @@
 %
 SOLVER= EULER
 MATH_PROBLEM= DIRECT
-RESTART_SOL= NO
+RESTART_SOL= YES
 
 % ----------- COMPRESSIBLE AND INCOMPRESSIBLE FREE-STREAM DEFINITION ----------%
 %
@@ -45,7 +45,6 @@ NUM_METHOD_GRAD= WEIGHTED_LEAST_SQUARES
 CFL_NUMBER= 1.0
 CFL_ADAPT= YES
 CFL_ADAPT_PARAM= ( 0.9, 1.1, 1.0, 100.0, 0.8)
-RK_ALPHA_COEFF= ( 0.66667, 0.66667, 1.000000 )
 ITER= 500 
 LINEAR_SOLVER= FGMRES 
 LINEAR_SOLVER_ERROR= 1E-6
@@ -53,16 +52,7 @@ LINEAR_SOLVER_ITER= 3
 NEWTON_KRYLOV= YES
 NEWTON_KRYLOV_IPARAM= (0, 1, 1) % n0, np, ft
 NEWTON_KRYLOV_DPARAM= (0.0, 1e-20, -2.0, 1e-5) % r0, tp, rf, e
-
-% -------------------------- MULTIGRID PARAMETERS -----------------------------%
-%
 MGLEVEL= 0
-MGCYCLE= V_CYCLE
-MG_PRE_SMOOTH= ( 1, 2, 3, 3 )
-MG_POST_SMOOTH= ( 0, 0, 0, 0 )
-MG_CORRECTION_SMOOTH= ( 0, 0, 0, 0 )
-MG_DAMP_RESTRICTION= 0.8
-MG_DAMP_PROLONGATION= 0.8
 
 % -------------------- FLOW NUMERICAL METHOD DEFINITION -----------------------%
 %
