--- a/TestCases/fea_fsi/SquareCyl_Beam/config.cfg
+++ b/TestCases/fea_fsi/SquareCyl_Beam/config.cfg
@@ -67,7 +67,7 @@ NONLINEAR_FEM_INT_ITER = 20
 
 % -------------------------- DYNAMIC SIMULATION -------------------------------%
 %
-DYNAMIC_ANALYSIS= YES
+TIME_DOMAIN= YES
 TIME_DISCRE_FEA= NEWMARK_IMPLICIT
 NEWMARK_BETA=0.2601
 NEWMARK_GAMMA=0.52
