--- a/TestCases/fea_fsi/stat_fsi/configFEA.cfg
+++ b/TestCases/fea_fsi/stat_fsi/configFEA.cfg
@@ -59,7 +59,7 @@ FORMULATION_ELASTICITY_2D = PLANE_STRAIN
 POISSON_RATIO=0.4
 
 % -------------------------- DYNAMIC SIMULATION -------------------------------%
-DYNAMIC_ANALYSIS= NO
+TIME_DOMAIN= NO
 TIME_DISCRE_FEA= NEWMARK_IMPLICIT
 
 % -------------------------- STRUCTURAL SOLVER --------------------------------%
