--- a/TestCases/euler/ramp/inv_ramp.cfg
+++ b/TestCases/euler/ramp/inv_ramp.cfg
@@ -74,11 +74,11 @@ CONV_CAUCHY_EPS= 1E-10
 MESH_FILENAME= ramp_unst.su2 
 MESH_FORMAT= SU2  
 MESH_OUT_FILENAME= mesh_out.su2
-SOLUTION_FILENAME= solution_flow.dat
+SOLUTION_FILENAME= restart_flow.dat
 SOLUTION_ADJ_FILENAME= solution_adj.dat
 TABULAR_FORMAT= CSV
 CONV_FILENAME= history
-RESTART_FILENAME= restart_flow.dat
+RESTART_FILENAME= restart_flowrun.dat
 RESTART_ADJ_FILENAME= restart_adj.dat
 VOLUME_FILENAME= flow
 VOLUME_ADJ_FILENAME= adjoint
