cleanup limiter docs

--- a/config_template.cfg
+++ b/config_template.cfg
@@ -733,7 +733,7 @@ CONV_NUM_METHOD_SPECIES= SCALAR_UPWIND
 % Required for 2nd order upwind schemes (NO, YES)
 MUSCL_SPECIES= NO
 %
-% Slope limiter for species equations (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN, VAN_ALBADA_EDGE)
+% Slope limiter for species equations (same as SLOPE_LIMITER_TURB)
 SLOPE_LIMITER_SPECIES = NONE
 %
 % Time discretization for species equations (EULER_IMPLICIT, EULER_EXPLICIT)
@@ -1095,36 +1095,37 @@ CUSTOM_OBJFUNC= 'DRAG + 10 * pow(fmax(0.4-LIFT, 0), 2)'
 %           Required for 2nd order upwind schemes (NO, YES)
 MUSCL_FLOW= YES
 %
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN, VAN_ALBADA_EDGE)
-%
+% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN, VAN_ALBADA_EDGE,
+%                NISHIKAWA_R3, NISHIKAWA_R4, NISHIKAWA_R5)
 SLOPE_LIMITER_FLOW= VENKATAKRISHNAN
 %
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence equations.
-%           Required for 2nd order upwind schemes (NO, YES)
+% Same as MUSCL_FLOW but for turbulence.
+%
 MUSCL_TURB= NO
 %
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN)
+% Slope limiter (same as SLOPE_LIMITER_FLOW except VAN_ALBADA_EDGE)
 %
 SLOPE_LIMITER_TURB= VENKATAKRISHNAN
 %
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the adjoint flow equations.
-%           Required for 2nd order upwind schemes (NO, YES)
+% Same as MUSCL_FLOW but for the continuous adjoint equations.
+%
 MUSCL_ADJFLOW= YES
 %
-% Slope limiter (NONE, VENKATAKRISHNAN, VENKATAKRISHNAN_WANG, BARTH_JESPERSEN, VAN_ALBADA_EDGE,
-%                SHARP_EDGES, WALL_DISTANCE, NISHIKAWA_R3, NISHIKAWA_R4, NISHIKAWA_R5)
+% Slope limiter (same as SLOPE_LIMITER_FLOW plus SHARP_EDGES, WALL_DISTANCE)
+%
 SLOPE_LIMITER_ADJFLOW= VENKATAKRISHNAN
 %
-% Monotonic Upwind Scheme for Conservation Laws (TVD) in the turbulence adjoint equations.
-%           Required for 2nd order upwind schemes (NO, YES)
+% Same as MUSCL_FLOW but for continuous adjoint turbulence equations.
+%
 MUSCL_ADJTURB= NO
 %
 % Slope limiter (see SLOPE_LIMITER_ADJFLOW)
+%
 SLOPE_LIMITER_ADJTURB= VENKATAKRISHNAN
 %
-% Coefficient for the Venkat's limiter (upwind scheme). A larger values decrease
-%             the extent of limiting, values approaching zero cause
-%             lower-order approximation to the solution (0.05 by default)
+% Coefficient for Venkatakrishnan-type limiters (upwind scheme).
+% A larger value decreases the extent of limiting, values approaching zero
+% cause lower-order approximation to the solution (0.05 by default)
 VENKAT_LIMITER_COEFF= 0.05
 %
 % Reference coefficient for detecting sharp edges (3.0 by default).
