--- a/config_template.cfg
+++ b/config_template.cfg
@@ -1074,8 +1074,8 @@ MARKER_FLUID_INTERFACE= ( NONE )
 % Marker(s) in which the flow load is computed/applied
 MARKER_FLUID_LOAD= ( NONE )
 %
-% Kind of interface interpolation among different zones (NEAREST_NEIGHBOR,
-%                                                        ISOPARAMETRIC, SLIDING_MESH)
+% Kind of interface interpolation among different zones (NEAREST_NEIGHBOR, WEIGHTED_AVERAGE,
+%                                                        ISOPARAMETRIC, RADIAL_BASIS_FUNCTION)
 KIND_INTERPOLATION= NEAREST_NEIGHBOR
 %
 % Use conservative approach for interpolating between meshes
