--- a/config_template.cfg
+++ b/config_template.cfg
@@ -377,6 +377,7 @@ FROZEN_MIXTURE= NO
 INTERPOLATION_METHOD= MLP
 
 % Name of the input file containing the information required for the interpolator to function
+% See https://github.com/EvertBunschoten/MLPCpp for more information.
 FILENAME_INTERPOLATOR= MLP_collection.mlp
 
 % Relaxation factor for the Newton solvers in the data-driven fluid model
