--- a/SU2_CFD/src/meson.build
+++ b/SU2_CFD/src/meson.build
@@ -30,6 +30,7 @@ su2_cfd_src += files(['output/COutputFactory.cpp',
                       'output/CHeatOutput.cpp',
                       'output/CMeshOutput.cpp',
                       'output/CNEMOCompOutput.cpp',
+                      'output/CTurboOutput.cpp' ,
                       'output/COutput.cpp',
                       'output/filewriter/CParallelDataSorter.cpp',
                       'output/filewriter/CFVMDataSorter.cpp',
