--- a/config_template.cfg
+++ b/config_template.cfg
@@ -628,6 +628,10 @@ SUBSONIC_ENGINE_VALUES= ( 0.4, 0.0, 0.0, 2116.216, 518.67 )
 %                                             CENTRIPETAL_AXIAL, AXIAL_CENTRIFUGAL)
 TURBOMACHINERY_KIND= CENTRIPETAL CENTRIPETAL_AXIAL
 %
+% Specify the machine architecture for performance analysis (TURBINE, COMPRESSOR, PROPELLOR)
+%
+TURBO_PERF_KIND = TURBINE TURBINE
+%
 % Specify kind of interpolation for the mixing-plane (LINEAR_INTERPOLATION,
 %                                                     NEAREST_SPAN, MATCHING)
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
