Updated transonic stator test case to fix reg test

--- a/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_restart.cfg
+++ b/TestCases/turbomachinery/transonic_stator_2D/transonic_stator_restart.cfg
@@ -75,6 +75,7 @@ SPATIAL_FOURIER= YES
 %---------------------------- TURBOMACHINERY SIMULATION -----------------------------%
 %
 TURBOMACHINERY_KIND = AXIAL
+TURBO_PERF_KIND = TURBINE
 RAMP_OUTLET_PRESSURE= NO
 RAMP_OUTLET_PRESSURE_COEFF= (700000.0, 10.0, 500)
 AVERAGE_PROCESS_KIND= MIXEDOUT
