updated all turbo cases

--- a/TestCases/turbomachinery/APU_turbocharger/Jones_restart.cfg
+++ b/TestCases/turbomachinery/APU_turbocharger/Jones_restart.cfg
@@ -75,6 +75,7 @@ SPATIAL_FOURIER= NO
 %---------------------------- TURBOMACHINERY SIMULATION -----------------------------%
 %
 TURBOMACHINERY_KIND= CENTRIPETAL CENTRIPETAL_AXIAL
+TURBO_PERF_KIND = TURBINE TURBINE
 MIXINGPLANE_INTERFACE_KIND= LINEAR_INTERPOLATION
 TURBULENT_MIXINGPLANE= YES
 RAMP_OUTLET_PRESSURE= NO
