--- a/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
+++ b/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
@@ -78,6 +78,7 @@ SPATIAL_FOURIER= NO
 %---------------------------- TURBOMACHINERY SIMULATION -----------------------------%
 %
 TURBOMACHINERY_KIND= AXIAL AXIAL
+TURBO_PERF_KIND = TURBINE TURBINE
 TURBULENT_MIXINGPLANE= YES
 RAMP_OUTLET_PRESSURE= NO
 RAMP_OUTLET_PRESSURE_COEFF= (140000.0, 10.0, 2000)
