--- a/TestCases/turbomachinery/centrifugal_blade/centrifugal_blade.cfg
+++ b/TestCases/turbomachinery/centrifugal_blade/centrifugal_blade.cfg
@@ -68,6 +68,7 @@ MARKER_PLOTTING= ( wall1, wall2 )
 %
 % Marker(s) between turbomachinery performance are evaluated. Use BLADE for single blade, STAGE for stage and TURBINE for a multi-stage.   
 MARKER_TURBO_PERFORMANCE= (inflow, outflow, BLADE)
+TURBO_PERF_KIND = TURBINE
 %
 % ----------------------- DYNAMIC MESH DEFINITION -----------------------------%
 %
