Running AD cases

--- a/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
+++ b/TestCases/turbomachinery/axial_stage_2D/Axial_stage2D.cfg
@@ -69,6 +69,7 @@ MARKER_PERIODIC= ( periodic1, periodic2, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 0.04
 MARKER_TURBOMACHINERY= (inflow, outmix, inmix, outflow)
 MARKER_ANALYZE= (outflow)
 %
+MARKER_ZONE_INTERFACE= (outmix, inmix)
 % Mixing-plane interface markers must be specified to activate the transfer of information between zones
 MARKER_MIXINGPLANE_INTERFACE= (outmix, inmix)
 %
